<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEmployee"
    android:background="@color/super_light_green">

    <!-- Titel -->
    <TextView
        android:id="@+id/tv_add_employee"
        android:textColor="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:text="@string/add_employee_head"
        android:textSize="@dimen/head_size"
        app:layout_constraintBottom_toTopOf="@id/et_name"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- ID -->
    <TextView
        android:id="@+id/id_employee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/add_employee_id_field"
        android:textColorHint="@color/light_brown"
        android:visibility="visible"
        android:fontFamily="@font/palanquin_dark"
        android:textColor="@color/light_brown"
        android:layout_marginHorizontal="30dp"
        android:textSize="@dimen/medium_size"
        app:layout_constraintBottom_toTopOf="@+id/et_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_employee"
        />

    <!-- ET Namn -->
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/palanquin_dark"
        android:background="@color/white"
        android:padding="10dp"
        android:hint="@string/add_employee_hint_name"
        android:textColor="@color/gray"
        android:inputType="text"
        android:textColorHint="@color/light_brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- ET ålder -->
    <EditText
        android:id="@+id/et_age"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/edge_margin"
        android:fontFamily="@font/palanquin_dark"
        android:background="@color/white"
        android:textColorHint="@color/light_brown"
        android:padding="@dimen/small_padding"
        android:textColor="@color/gray"
        android:inputType="number"
        android:hint="@string/add_employee_hint_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <!-- ET lön -->
    <EditText
        android:id="@+id/et_salary"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/edge_margin"
        android:fontFamily="@font/palanquin_dark"
        android:background="@color/white"
        android:textColorHint="@color/light_brown"
        android:inputType="number"
        android:padding="@dimen/small_padding"
        android:textColor="@color/gray"
        android:hint="@string/add_employee_hint_salary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_age" />

    <!-- Status-text-->
    <TextView
        android:id="@+id/status"
        android:hint="@string/waiting_to_add_hint"
        android:textColorHint="@color/gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/large_size"
        android:fontFamily="@font/quicksand_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_salary"
        android:padding="@dimen/medium_padding"
        />

    <!-- Fab add -->
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_employee"
        android:fontFamily="@font/palanquin_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_pink"
        android:contentDescription="@string/fab_content_desc_add"
        android:text="@string/add_text_fab"
        android:textColor="@color/gray"
        app:icon="@drawable/add"
        app:iconPadding="@dimen/medium_padding"
        app:iconTint="@color/light_brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status" />

    <!-- Fab back -->
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_back"
        android:fontFamily="@font/palanquin_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_pink"
        android:contentDescription="@string/fab_content_desc_back"
        android:text="@string/back_text_fab"
        android:textColor="@color/gray"
        app:icon="@drawable/arrow_back"
        app:iconPadding="@dimen/medium_padding"
        app:iconTint="@color/light_brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fab_add_employee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status" />

</androidx.constraintlayout.widget.ConstraintLayout>
