<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/super_light_green"
    tools:context=".MainActivity">

    <!-- Titel -->
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_top_margin"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:text="@string/main_head_text"
        android:textColor="@color/gray"
        android:textSize="@dimen/main_size"
        app:layout_constraintBottom_toTopOf="@id/guideline_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Övre guideline -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"
        />

    <!-- Nedre guideline -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        />

    <!-- Fab layout -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_bottom">

        <!-- Fab view -->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_view"
            android:fontFamily="@font/palanquin_dark"
            android:layout_width="@dimen/fab_width"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_pink"
            android:contentDescription="@string/fab_content_desc_view"
            android:text="@string/view_employees_text_fab"
            android:textColor="@color/gray"
            app:icon="@drawable/view"
            app:iconPadding="@dimen/medium_padding"
            app:iconTint="@color/light_brown" />

        <!-- Fab add -->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_add"
            android:fontFamily="@font/palanquin_dark"
            android:layout_width="@dimen/fab_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/second_fab_margin_top"
            android:backgroundTint="@color/light_pink"
            android:contentDescription="@string/fab_content_desc_add"
            android:text="@string/add_employee_text_fab"
            android:textColor="@color/gray"
            app:icon="@drawable/add"
            app:iconPadding="@dimen/medium_padding"
            app:iconTint="@color/light_brown" />

        <!-- Fab edit -->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_edit"
            android:fontFamily="@font/palanquin_dark"
            android:layout_width="@dimen/fab_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/third_fab_margin_top"
            android:backgroundTint="@color/light_pink"
            android:text="@string/edit_employee_text_fab"
            android:textColor="@color/gray"
            app:icon="@drawable/baseline_edit_24"
            app:iconPadding="@dimen/medium_padding"
            app:iconTint="@color/light_brown" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>