<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/medium_margin"
    android:backgroundTint="@color/light_pink"
    android:padding="@dimen/medium_padding"
    app:cardCornerRadius="@dimen/corner_radius">



    <!-- Person-ikon -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/small_margin"
        android:src="@drawable/person"
        android:tint="@color/gray"
        tools:ignore="UseAppTint" />

    <!-- Text -->
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/palanquin_dark"
        android:gravity="center"
        android:padding="@dimen/extra_padding"
        android:text="@string/name_list"
        android:textColor="@color/gray"
        android:textSize="@dimen/small_size" />

    <!-- Edit salary -->
    <ImageButton
        android:id="@+id/money_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center|end"
        android:backgroundTint="@color/light_pink"
        android:src="@drawable/baseline_attach_money_24"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <!-- Edit age -->
    <ImageButton
        android:id="@+id/age_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginStart="@dimen/edit_icon_margin"
        android:backgroundTint="@color/light_pink"
        android:src="@drawable/age"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <!-- Delete-->
    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end|center"
        android:backgroundTint="@color/light_pink"
        android:src="@drawable/baseline_delete_forever_24"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <!-- ET edit salary -->
    <EditText
        android:id="@+id/edit_salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:background="@color/white"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/edit_salary_text"
        android:inputType="number"
        android:paddingBottom="@dimen/medium_padding"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/medium_size"
        android:visibility="invisible" />

    <!-- OK knapp -->
    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:backgroundTint="@color/light_brown"
        android:fontFamily="@font/palanquin_dark"
        android:text="@string/confirm_button_text"
        android:textColor="@color/gray"
        android:visibility="invisible" />

    <!-- ET edit age -->
    <EditText
        android:id="@+id/edit_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:background="@color/white"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/edit_age_text"
        android:inputType="number"
        android:paddingBottom="@dimen/medium_padding"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/medium_size"
        android:visibility="invisible" />

    <!-- OK knapp -->
    <Button
        android:id="@+id/button_save_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:backgroundTint="@color/light_brown"
        android:fontFamily="@font/palanquin_dark"
        android:text="@string/confirm_button_text"
        android:textColor="@color/gray"
        android:visibility="invisible" />



    </androidx.cardview.widget.CardView>
